--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.0",
-    "nanoid": "^3.3.4"
+    "nanoid": "^3.3.4",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
